--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
         </div>
 
         <div class="container">
+            <div class="container" id="location">
+            </div>
             <div id="todos"></div>
             <form id="new-todo">
                 <input type="text" class="input" placeholder="Something to do" name="text">
