--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
             <form id="new-todo">
                 <input type="text" class="input" placeholder="Something to do" name="text">
                 <button class="button">Add Todo</button>
+                <button class="button_delete">Delete all</button>
             </form>
         </div>
 
